# vantron-remote-media-server

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/vantron_remote_media_server/: __init__.py  __main__.py  server.py
